# turnpy

./: .env.example  .gitignore  LICENSE.txt  pyproject.toml  readme.md  requirements.txt  turn_config.json.example  turn_integrator.py  turn_intergrator.py
.github/workflows/: publish.yaml
src/: turn_integrator.py
test/: test_turn_integrator.py
test/cassettes/: test_destroy_claim.yaml  test_determine_and_release_claim.yaml  test_determine_claim_found.yaml  test_determine_claim_not_found.yaml  test_obtain_contact_profile.yaml  test_save_media.yaml  test_send_interactive_message.yaml  test_send_interactive_message_button.yaml  test_send_interactive_message_list.yaml  test_send_text_message.yaml  test_start_journey.yaml  test_update_contact_profile.yaml
turnpy/: async_turn_integrator.py  turn_integrator.py
